--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=AdInsight
+app.version=@project.version@
+springdoc.swagger-ui.path=/api-doc
+
+spring.datasource.url=jdbc:h2:~/testdb;DB_CLOSE_ON_EXIT=TRUE;
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
